crates/camello-syntax/src/parse/snapshots/camello_syntax__parse__tests__statements__success__named_sub_empty_attribute.pl.snap
---
source: crates/camello-syntax/src/parse/tests.rs
expression: rendered
---
ROOT
  SUB_DEF
    `sub` "sub"
    SUB_NAME
      identifier "foo"
    ATTR
      `:` ":"
    BLOCK
      `{` "{"
      `}` "}"
