crates/camello-syntax/src/parse/snapshots/camello_syntax__parse__tests__statements__success__postfix_when_modifier.pl.snap
---
source: crates/camello-syntax/src/parse/tests.rs
expression: rendered
---
ROOT
  LOOP_STMT
    `for` "for"
    FOREACH_HEADER
      PAREN_EXPR
        `(` "("
        LIST_EXPR
          ARRAY_VAR
            `@` "@"
            identifier "items"
        `)` ")"
    BLOCK
      `{` "{"
      EXPR_STMT
        LIST_EXPR
          LIST_CALL_EXPR
            SUB_NAME
              identifier "say"
            LIST_EXPR
              LITERAL
                string literal "\"Found a number > 10: $_\""
        STMT_MODIFIER
          `when` "when"
          LIST_EXPR
            BINARY_EXPR
              SCALAR_VAR
                `$` "$"
                identifier "_"
              `>` ">"
              LITERAL
                number "10"
        `;` ";"
      `}` "}"
