crates/camello-syntax/src/parse/snapshots/camello_syntax__parse__tests__statements__success__semicolon_valid_end_section.pl.snap
---
source: crates/camello-syntax/src/parse/tests.rs
expression: rendered
---
ROOT
  EXPR_STMT
    LIST_EXPR
      CALL_EXPR
        SUB_NAME
          identifier "foo"
        ARG_LIST
          `(` "("
          LIST_EXPR
          `)` ")"
  DATA_SECTION
    `__END__` "__END__"
