crates/camello-syntax/src/parse/snapshots/camello_syntax__parse__tests__statements__success__semicolon_valid_simple.pl.snap
---
source: crates/camello-syntax/src/parse/tests.rs
expression: rendered
---
ROOT
  EXPR_STMT
    LIST_EXPR
      CALL_EXPR
        SUB_NAME
          identifier "foo"
        ARG_LIST
          `(` "("
          LIST_EXPR
          `)` ")"
    `;` ";"
  EXPR_STMT
    LIST_EXPR
      CALL_EXPR
        SUB_NAME
          identifier "bar"
        ARG_LIST
          `(` "("
          LIST_EXPR
          `)` ")"
    `;` ";"
  EXPR_STMT
    LIST_EXPR
      CALL_EXPR
        SUB_NAME
          identifier "print"
        ARG_LIST
          `(` "("
          LIST_EXPR
            LITERAL
              number "1"
          `)` ")"
    `;` ";"
  EXPR_STMT
    LIST_EXPR
      CALL_EXPR
        SUB_NAME
          identifier "print"
        ARG_LIST
          `(` "("
          LIST_EXPR
            LITERAL
              number "2"
          `)` ")"
    `;` ";"
